@@ -1,3 +1,7 @@
-SUBDIRS = lib rmsgw rmsgw_aci rmsgwmon man
+SUBDIRS = lib rmsgw rmsgw_aci rmsgwmon rmschanstat man
 
 ACLOCAL_AMFLAGS = -I m4
+
+EXTRA_DIST = pathnames.h
+
+RMS_SYSCONFDIR = @sysconfdir@/rmsgw/
