@@ -1,0 +1,16 @@
+/*filenames and where to find them*/
+
+#define RMSCONFIGFILE   RMS_SYSCONFDIR"gateway.conf" /* default config file */
+#define RMSVERSIONFILE  RMS_SYSCONFDIR".version_info" /* version info file */
+#define RMSBTEXTFILE    RMS_SYSCONFDIR"banner" /* default banner file */
+#define CMSHOSTFILE     RMS_SYSCONFDIR"hosts" /* default cms host file */
+#define CHANNELFILE     RMS_SYSCONFDIR"channels" /* default channels file */
+#define XMLCHANNELFILE  RMS_SYSCONFDIR"channels.xml" /* dflt xml channels file */
+#define GWHELPFILE      RMS_SYSCONFDIR"gwhelp" /* gateway help file */
+#define ACIHELPFILE     RMS_SYSCONFDIR"acihelp" /* aci help file */
+#define CMSSTATDIR      RMS_SYSCONFDIR"stat" /* cms status directory */
+#define CHANNELUPDATER  RMS_SYSCONFDIR"updatechannel.py" /* program to update channels */
+#define VERSIONUPDATER  RMS_SYSCONFDIR"updateversion.py" /* program to update version */
+#define HOOKDIR         RMS_SYSCONFDIR"hooks" /* directory the holds gateway hook scripts */
+
+
